--- a/app/templates/extrairDados.html
+++ b/app/templates/extrairDados.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Extrair dados</title>
-    <link rel="stylesheet" href="{{url_for('static',filename='extrairDados.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='index.css')}}">
+<!--     <link rel="stylesheet" href="{{url_for('static',filename='extrairDados.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='index.css')}}"> -->
+    <link rel="stylesheet" href="../static/index.css">
+    <link rel="stylesheet" href="../static/extrairDados.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 </head>
