--- a/app/templates/baixarArquivo.html
+++ b/app/templates/baixarArquivo.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial - Extração Flashscore</title>
-    <link rel="stylesheet" href="{{url_for('static',filename='index.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='baixarDataset.css')}}">
+<!--     <link rel="stylesheet" href="{{url_for('static',filename='index.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='baixarDataset.css')}}"> -->
+    <link rel="stylesheet" href="../static/index.css">
+    <link rel="stylesheet" href="../static/extrairDados.css">
 </head>
 <body>
     <header class="cabecalho">
